:white_check_mark: Improve backend tests